--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_appl_blog?createDatabaseIfN
 spring.datasource.username=user1_admin
 spring.datasource.password=9S1bH4RCreDx
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
