--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,22 +3,29 @@ debug=true
 logging.level.org.springframework.boot.autoconfigure=ERROR
 
 #spring.datasource.url=jdbc:mysql://database-1.c8cisywhajhq.sa-east-1.rds.amazonaws.com:3306/db_appl_blog?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/db_appl_blog?createDatabaseIfNotExist=true
-spring.datasource.username=user1_admin
-spring.datasource.password=9S1bH4RCreDx
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_appl_blog
+spring.datasource.username=postgres
+spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.platform=mysql
+#spring.sql.init.platform=mysql
+spring.sql.init.platform=postgresql
 spring.sql.init.mode=always
 #spring.sql.init.data-locations=classpath*:data_1.sql,classpath*:data_2.sql,classpath*:data_3.sql
 spring.sql.init.data-locations=classpath*:data_1.sql
 
 
 # database configs
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.validationQuery=SELECT 1
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 #spring.jpa.show-sql=true
 
 picturesBucket.name=pictures-blog-java
