--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.api.core</groupId>
 	<artifactId>appl</artifactId>
 	<version>0.0.4</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>appl</name>
 	<description>Java blog project for Spring Boot</description>
 	<properties>
